inheritance integrated